Fixed FOUC on mobile menu with DOM load check and opacity

--- a/inc/assets/css/menu.css
+++ b/inc/assets/css/menu.css
@@ -5,13 +5,6 @@ slide-drawer {
 	align-items: center;
 }
 
-#drawer {
-	position: fixed;
-	z-index: 9998;
-	top: 0;
-	bottom: 0;
-	user-select: none;
-}
 
 #overlay {
 	position: fixed;
@@ -138,12 +131,18 @@ ul#mobile_menu ul.sub-menu {
 }
 
 #drawer {
+	position: fixed;
+	z-index: 9998;
+	top: 0;
+	bottom: 0;
+	user-select: none;
 	height: 100%;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+
 }
 
 #menu-wrapper {
@@ -155,6 +154,7 @@ ul#mobile_menu ul.sub-menu {
 	align-items: center;
 	overflow-y: scroll;
 	overflow-x: hidden;
+	opacity: 0;
 }
 
 
@@ -280,8 +280,3 @@ ul#mobile_menu ul.sub-menu {
 .dropdown-menu li:hover{
 	background: rgba(0, 0, 0, 0.02);
 }
-
-
-
-
-
