--- a/style.css
+++ b/style.css
@@ -1639,8 +1639,3 @@ html{
 body #content{
   animation: fadeIn .75s ease-in-out;
 } */
-
-#primary img {
-  border: 6px solid #fff;
-  box-shadow: 0px 1px 8px rgb(0 0 0 / 25%);
-}
